<resources>
    <string name="app_name">Weather-app-new</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="week_weather">Week weather</string>

    <string name="weatherNow">Weather now</string>
    <string name="weatherImage">TODO</string>
    <string name="clock">Clock</string>
    <string name="temp">average temperature + 15</string>
    <string name="dayOfWeek">Day of Week</string>
    <string name="barnaul">Barnaul</string>
    <string name="sochi">Sochi</string>
    <string name="moscow">Moscow</string>
    <string name="backToAct1">Back to Activity 1</string>
    <string name="weather_for_a_week">weather for a week</string>
    <string name="refresh">refresh</string>
    <string name="temperature">temperature</string>
    <string name="pressure">pressure</string>
    <string name="humidity">humidity</string>
    <string name="wind_speed">wind_speed</string>
    <string name="developers">Developers</string>
    <string name="city">city</string>
    <string name="Enter_city">Enter City</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_maps">Map</string>
    <string name="latitude">Широта</string>
    <string name="longitude">Долгота</string>
</resources>